flux/infrastructure/webapps/emdr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emdr
  namespace: webapps
  labels:
    app: emdr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: emdr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: emdr
    spec:
      containers:
        - name: nginx
          image: ghcr.io/yappingboy/emdr:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 25m
              memory: 32Mi
      imagePullSecrets:
        - name: ghcr-credentials
