flux/infrastructure/webapps/emdr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emdr
  namespace: webapps
  labels:
    app: emdr
spec:
  selector:
    app: emdr
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
