flux/infrastructure/webapps/emdr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emdr
  namespace: webapps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`emdr.becklab.cloud`)
      kind: Rule
      services:
        - name: emdr
          port: 80
      middlewares:
        - name: sso-admin-chain
          namespace: identity
  tls:
    secretName: emdr-tls
